--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="entireSite">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +11,17 @@
         <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
         <!-- End React CDNs-->
 
-        <title>Login</title>
+        <!-- Stylesheets-->
+        <link rel="stylesheet" href="index.css">
+        <!-- End Stylesheets-->
+
+        <!-- Custom Fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+        <!-- End Custom Fonts -->
+        
+        <title>GritMeals</title>
     </head>
     
     <body>
